# trdv2

./: README.md
TradingAgents/: pyproject.toml
v2/: .gitignore  (+3 more)
v2/backend/: alembic.ini  pyproject.toml
v2/backend/alembic/: env.py
v2/backend/alembic/versions/: 0001_initial_schema.py  0002_add_settings_api_keys.py  0003_add_rag_tables.py  0004_add_run_evidence_citation_key.py  0005_add_rag_document_soft_delete.py
v2/backend/app/: __init__.py  main.py
v2/backend/app/api/: auth.py  deps.py  rag.py  runs.py  settings.py
v2/backend/app/core/: config.py  run_states.py
v2/backend/app/db/: base.py  models.py  session.py
v2/backend/app/schemas/: __init__.py  auth.py  events.py  quality.py  rag.py  reports.py  runs.py  settings.py  trace.py
v2/backend/app/services/: auth_service.py  rag_embedding_service.py  rag_import_service.py  rag_retrieval_service.py  run_artifact_service.py  run_event_service.py  run_quality_service.py  run_service.py  run_trace_service.py  settings_service.py  sse_broker.py  tool_trace_callback.py  tradingagents_runner.py
v2/backend/app/tests/: conftest.py  test_auth.py  test_health.py  test_inprocess_manager.py  test_rag_api.py  test_rag_embedding_service.py  test_rag_import_service.py  test_rag_retrieval_service.py  test_reports_and_settings_api.py  test_run_lifecycle_api.py  test_run_quality_api.py  test_run_state_machine.py  test_run_trace_api.py  test_runs_api.py  test_sse_events.py  test_tool_trace_callback.py  test_tradingagents_runner_env.py  test_tradingagents_runner_streaming.py
v2/backend/app/workers/: inprocess_manager.py
(+67 files in other folders)
