[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents-v2-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "tradingagents @ file:///F:/vscode/vsc/eco/TradingAgents",
    "yfinance>=1.4.1",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py313"
